# coffeeplot

./: .coverage  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
data/: telemetry_log.jsonl
docs/: CHANGELOG.md  dataclasses_as_explicit_plain_classes.md
src/coffeeplot/: atomic_telemetry.py  context.py  database.py  plot_boundary.py
tests/: test_null.py
